--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,19 @@
 
 <body class="page-body">
   <header class="header">
+
     <div class="header__wrapper">
+      <div class="header__burger-wrapper"><button class="header__burger" type="button"><img src="img/burger.svg" alt="иконка меню"></button></div>
       <a class="header__logo" href="index.html"><img src="img/logo.svg" alt="Логотип"></a>
       <nav class="header__menu">
         <a class="header__link header__link--margin anchor" href="#about">О нас</a>
         <a class="header__link header__link--margin anchor" href="#work">Как мы работаем</a>
         <a class="header__link anchor" href="#contacts">Контакты</a>
+        <a class="header__btn btn btn--border js-popup-call" href="#">Заказать звонок</a>
       </nav>
       <ul class="header__contacts">
-        <li><a class="header__link" href="tel:+79000448720">8 9000 44 8720, </a><a class="header__link" href="tel:+783432133535">8 (343) 21-33-535</a></li>
+        <li><a class="header__link header__link--desktop" href="tel:+79000448720">8 9000 44 8720, </a><a class="header__link header__link--desktop" href="tel:+783432133535">8 (343) 21-33-535</a></li>
+        <li><a class="header__link header__link--mobile" href="tel:+79000448720">89000448720 </a><a class="header__link header__link--mobile" href="tel:+783432133535">83432133535</a></li>
         <li><a class="header__btn btn btn--border js-popup-call" href="#">Заказать звонок</a></li>
       </ul>
     </div>
